# CP-Companion

./: README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clist.rs  database.rs  lib.rs
src/components/: ContestCard.tsx  RainmeterWidget.tsx
src/stores/: useContestStore.ts
