[package]
name = "cp-companion"
version = "3.0.0"
description = "A Tauri App"
authors = ["Mradul Gupta", "Siddhart Paul"]
edition = "2021"

[lib]
name = "cp_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "^2.0.0", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2.4.2"
